--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p><strong>Background</strong><br><br>
 Using devices such as Jawbone Up, Nike FuelBand, and Fitbit it is now possible to collect a large amount of data about personal activity relatively inexpensively. These type of devices are part of the quantified self movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. One thing that people regularly do is quantify how much of a particular activity they do, but they rarely quantify how well they do it. In this project, your goal will be to use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants. They were asked to perform barbell lifts correctly and incorrectly in 5 different ways. More information is available from the website here: <a href="http://groupware.les.inf.puc-rio.br/har">http://groupware.les.inf.puc-rio.br/har</a> (see the section on the Weight Lifting Exercise Dataset).</p>
 
-<br><p><strong>Data</strong><br>
+<br><p><strong>Data</strong><br><br>
 The training data for this project are available here: 
 <a href="https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv">https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv</a></p>
 
@@ -58,7 +58,7 @@ procTesting = testing[,-rmNA]
 procSubmission = submission[,-rmNA]
 </code></pre>
 
-<p><strong> Creating covariates: near zero variance terms</strong>
+<br><p><strong> Creating covariates: near zero variance terms</strong><br><br>  
 Second, we exclude variables which have near zero variance</p>
 
 <pre><code>nearZeroCol = nearZeroVar(procTraining)
@@ -91,7 +91,7 @@ We will use random forest.</p>
 <pre><code>modelTREE = train(procTraining$classe~., data=pcatraining, method="rf")
 </code></pre>
 
-<p><strong> Out of sample accuracy </strong>
+<br><p><strong> Out of sample accuracy </strong><br><br>
 Test the model on the testing dataset.</p>
 
 <pre><code>confusionMatrix(predict(modelTREE, pcatesting), procTesting$classe)
